# ekal-enterprise-knowledge-layer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  docker-compose.full-stack.yml  mermaids.json  requirements-shared.txt  test_frame.puml  test_uc.puml
.github/: PULL_REQUEST_TEMPLATE.md
admin-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  Dockerfile  alembic.ini  desktop_main.py  desktop_main.spec  docker-compose.yml  requirements.docker.txt  requirements.txt
deploy/: .env.example  docker-compose.prod.yml  init-db.sql  nginx.conf  setup.sh
desktop/: README.md  build.js  central.json.example  installer.nsh  main.js  package-lock.json  package.json  preload.js  splash.html
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
nginx/: nginx.conf
scripts/: init-db.sql  translate_config.example.json
server/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  requirements.docker.txt  requirements.txt  run.py
shared/: README.md  pyproject.toml
shared-frontend/: README.md  package-lock.json  package.json
shared/rag_platform_common/: __init__.py  encryption.py  jwt_utils.py  pagination.py  password.py  permissions.py  token_blacklist.py
shared/tests/: test_permissions.py
website/: 404.html  architecture.html  changelog.html  docs.css  docs.html  download.html  faq.html  features.html  index.html  pricing.html  privacy.html  sitemap.xml  (+5 more)
(+418 files in other folders)
