[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-platform-common"
version = "0.1.0"
description = "知枢 RAG 平台共享库：security、password、jwt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyJWT[crypto]>=2.11.0",
    "bcrypt>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_platform_common*"]
